Somewhat working version of complete controller refactoring overhaul.

--- a/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
+++ b/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
@@ -3,11 +3,11 @@
     <div ng-if="hasComplete" class="table-wrapper">
       <input type="checkbox" class="left-checkbox-wrapper" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" swiper-click="itemChecked()" />
       <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
-      <a id="accordionTitleLink" ng-class="getTitleInputClass()" class="accordion-toggle" href swiper-click="clickTitle()">{{item.title}}</a>
+      <a id="accordionTitleLink" ng-class="getTitleInputClasses()" class="accordion-toggle" href swiper-click="clickTitle()">{{getItemTitle()}}</a>
     </div>
     <div ng-if="!hasComplete" id="soloAccordionTitleLinkWrapper" class="table-wrapper">
       <div id="accordionTitleHeightFix"><br/></div>
-      <a id="accordionTitleLink" class="accordion-toggle center-input-wrapper" href ng-click="clickTitle()">{{item.title}}</a>
+      <a id="accordionTitleLink" ng-class="getTitleInputClasses()" class="accordion-toggle" href ng-click="clickTitle()">{{getItemTitle()}}</a>
     </div>
   </div>
   <form ng-switch-when="true" role="form" name="itemTitleEdit" class="table-wrapper accordion-title-open" ng-class="!hasComplete && 'no-checkbox'" editable-field-container="auto">
@@ -15,7 +15,7 @@
       <input type="checkbox" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" swiper-click="itemChecked()" editable-field />
       <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
     </div>
-    <div ng-class="getTitleInputClass()">
+    <div ng-class="getTitleInputClasses()">
       <label class="sr-only" for="accordionTitleInput">title</label>
       <input id="accordionTitleInput" type="text" ng-focus="startTitleEdit($event)" ng-keypress="evaluateKeyPress($event)" class="simple-input swiper-no-swiping" ng-model="item.title" placeholder="title..." maxlength="128" required editable-field>
     </div>
