--- a/frontend/core/src/main/webapp/static/app/base/editContext.html
+++ b/frontend/core/src/main/webapp/static/app/base/editContext.html
@@ -1,25 +1,23 @@
-<div class="no-slides-container" ng-controller="MainController">
-  <div id="edit-page" ng-controller="ContextsController">
-    <header class="edit-header" edit-header="context" item-edit-form="contextEdit" save-item="saveContext(context)" cancel-edit="cancelEdit()"></header>
-    <section id="edit-context" class="one-column-grid page">
-      <div class="column">
-        <div class="content-container simple-content-container">
-          <form role="form" name="contextEdit" editable-field-container>
-            <div class="form-group">
-              <label class="sr-only" for="contextTitle">title</label>
-              <input type="text" id="contextTitle" class="simple-input" ng-model="context.title" placeholder="title..." required editable-field>
-            </div>
-            <div class="form-group" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}">
-              <label class="sr-only" for="contextDescription">description</label>
-              <textarea id="contextDescription" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}" class="simple-input" ng-model="context.description" placeholder="description..." expanding-textarea editable-field></textarea>
-            </div>
-            <div class="form-group">
-              <label class="sr-only" for="contextLink">url</label>
-              <input type="text" id="contextLink" class="simple-input" ng-model="context.link" placeholder="url..." editable-field>
-            </div>
-          </form>
-        </div>
+<div id="edit-page">
+  <header class="edit-header" edit-header="context" item-edit-form="contextEdit" save-item="saveContext(context)" cancel-edit="cancelEdit()"></header>
+  <section id="edit-context" class="one-column-grid page">
+    <div class="column">
+      <div class="content-container simple-content-container">
+        <form role="form" name="contextEdit" editable-field-container>
+          <div class="form-group">
+            <label class="sr-only" for="contextTitle">title</label>
+            <input type="text" id="contextTitle" class="simple-input" ng-model="context.title" placeholder="title..." required editable-field>
+          </div>
+          <div class="form-group" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}">
+            <label class="sr-only" for="contextDescription">description</label>
+            <textarea id="contextDescription" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}" class="simple-input" ng-model="context.description" placeholder="description..." expanding-textarea editable-field></textarea>
+          </div>
+          <div class="form-group">
+            <label class="sr-only" for="contextLink">url</label>
+            <input type="text" id="contextLink" class="simple-input" ng-model="context.link" placeholder="url..." editable-field>
+          </div>
+        </form>
       </div>
-    </section>
-  </div>
+    </div>
+  </section>
 </div>
