--- a/frontend/core/src/main/webapp/static/app/base/editList.html
+++ b/frontend/core/src/main/webapp/static/app/base/editList.html
@@ -1,25 +1,23 @@
-<div class="no-slides-container" ng-controller="MainController">
-  <div id="edit-page" ng-controller="ListsController" editable-field-backdrop>
-    <header class="edit-header" edit-header="list" item-edit-form="listEdit" save-item="saveList(list)" cancel-edit="cancelEdit()"></header>
-    <section id="edit-list" class="one-column-grid page">
-      <div class="column">
-        <div class="content-container simple-content-container">
-          <form role="form" name="listEdit" editable-field-container>
-            <div class="form-group">
-              <label class="sr-only" for="listTitle">title</label>
-              <input type="text" class="simple-input" id="listTitle" ng-model="list.title" placeholder="title..." required editable-field>
-            </div>
-            <div class="form-group" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}">
-              <label class="sr-only" for="listDescription">description</label>
-              <textarea class="simple-input" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}" id="listDescription" ng-model="list.description" placeholder="description..." expanding-textarea editable-field></textarea>
-            </div>
-            <div class="form-group">
-              <label class="sr-only" for="listLink">url</label>
-              <input type="text" class="simple-input" id="listLink" ng-model="list.link" placeholder="url..." editable-field>
-            </div>
-          </form>
-        </div>
+<div id="edit-page" editable-field-backdrop>
+  <header class="edit-header" edit-header="list" item-edit-form="listEdit" save-item="saveList(list)" cancel-edit="cancelEdit()"></header>
+  <section id="edit-list" class="one-column-grid page">
+    <div class="column">
+      <div class="content-container simple-content-container">
+        <form role="form" name="listEdit" editable-field-container>
+          <div class="form-group">
+            <label class="sr-only" for="listTitle">title</label>
+            <input type="text" class="simple-input" id="listTitle" ng-model="list.title" placeholder="title..." required editable-field>
+          </div>
+          <div class="form-group" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}">
+            <label class="sr-only" for="listDescription">description</label>
+            <textarea class="simple-input" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}" id="listDescription" ng-model="list.description" placeholder="description..." expanding-textarea editable-field></textarea>
+          </div>
+          <div class="form-group">
+            <label class="sr-only" for="listLink">url</label>
+            <input type="text" class="simple-input" id="listLink" ng-model="list.link" placeholder="url..." editable-field>
+          </div>
+        </form>
       </div>
-    </section>
-  </div>
+    </div>
+  </section>
 </div>
