--- a/frontend/core/src/main/webapp/static/app/base/listsOverview.html
+++ b/frontend/core/src/main/webapp/static/app/base/listsOverview.html
@@ -1,4 +1,4 @@
-<section ng-init="newList={title:undefined}" ng-controller="ListsController">
+<section ng-init="newList={}">
   <h3><a href class="page-header" swiper-click="gotoLists()">lists</a></h3>
   <ul class="list-arrow-right">
     <li ng-if="lists && lists.length" ng-class="selected" ng-repeat="list in lists">
