--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -1,12 +1,16 @@
 <div ng-if="isMobile" ng-show="featureContainerReady" id="mobile-menu" ng-include="'static/app/auth/menu.html'" class="snap-drawer snap-drawer-left" scrollable></div>
 <div id="feature-container" feature-container ng-controller="MainController">
   <header ng-if="isContentFeatureActive()" class="page-header" ng-class="omnibarVisible && 'header-hidden'" ng-include="'static/app/main/pageHeader.html'"></header>
-  <header ng-if="!isContentFeatureActive()" class="static-page-header" ng-include="'static/app/main/staticPageHeader.html'"></header>
+  <header ng-if="isSystemFeatureActive()" class="static-page-header" ng-include="'static/app/main/staticPageHeader.html'"></header>
 
   <div ng-if="isContentFeatureActive('tasks')" ng-include="'static/app/tasks/tasksSlides.html'" include-replace></div>
+  <div ng-if="isFeatureActive('taskEdit')" ng-include="'static/app/tasks/editTask.html'" include-replace></div>
   <div ng-if="isContentFeatureActive('notes')" ng-include="'static/app/notes/notesSlides.html'" include-replace></div>
+  <div ng-if="isFeatureActive('noteEdit')" ng-include="'static/app/notes/editNote.html'" include-replace></div>
   <div ng-if="isContentFeatureActive('inbox')" ng-include="'static/app/main/inbox.html'" include-replace></div>
-
+  <div ng-if="isFeatureActive('itemEdit')" ng-include="'static/app/main/editItem.html'" include-replace></div>
+  <div ng-if="isFeatureActive('listEdit')" ng-include="'static/app/base/editList.html'" include-replace></div>
+  <div ng-if="isFeatureActive('contextEdit')" ng-include="'static/app/base/editContext.html'" include-replace></div>
   <div ng-if="isFeatureActive('account') && !isContentFeatureActive()" ng-include="'static/app/account/account.html'" include-replace></div>
   <div ng-if="isFeatureActive('about') && !isContentFeatureActive()" ng-include="'static/app/base/about.html'" include-replace></div>
   <div ng-if="isFeatureActive('admin') && !isContentFeatureActive()" ng-include="'static/app/admin/admin.html'" include-replace></div>
