--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -1,4 +1,4 @@
-<div id="omnibar-wrapper" class="swiper-no-swiping" ng-controller="ItemsController">
+<div id="omnibar-wrapper" class="swiper-no-swiping">
   <form id="{{heading}}-omnibar" ng-init="setOmnibarPlaceholder(omnibarFeature, heading)" role="form" name="{{heading}}-addOmniItem" ng-submit="saveOmnibarText(omnibarText)">
     <div class="form-group">
       <div ng-class="(omnibarVisible && 'omnibar-visible') || (!omnibarVisible && 'omnibar-hidden')">
@@ -10,7 +10,7 @@
       </div>
     </div>
   </form>
-  <div ng-if="omnibarVisible" class="omnibar-actions omnibar-animation">
+  <div ng-if="omnibarVisible === heading" class="omnibar-actions omnibar-animation">
     <ul class="button-row">
       <li class="button-container left-of-four border-right">
         <button type="button" class="normal-button" ng-click="clickOmnibarPlus(omnibarText)" ng-disabled="!omnibarHasText() || isLoading">
@@ -34,13 +34,13 @@
       </li>
     </ul>
   </div>
-  <div ng-if="omnibarVisible" id="omnibar-results" class="swiper-no-swiping" ng-style="{height: getOmnibarSearchResultsHeight()}" data-snap-ignore="true" >
+  <div ng-if="omnibarVisible === heading" id="omnibar-results" class="swiper-no-swiping" ng-style="{height: getOmnibarSearchResultsHeight()}" data-snap-ignore="true" >
     <div ng-if="!isSearchActive() || isLoading" id="filtered-items-placeholder" ng-style="{width: getColumnWidth()}" ng-click="clearOmnibar(heading)">&nbsp;</div>
     <div ng-if="isSearchActive() && !isLoading" id="filtered-items-container">
       <div ng-show="filteredItems.length" class="filtered-items">
         <h3 ><a href ng-click="gotoInbox()">inbox</a></h3>
         <div class="inner-page-content-container" accordion>
-          <div ng-repeat="item in filteredItems = (items | filter:{title:searchText.delayed}) | orderBy:'modified':true">
+          <div ng-repeat="item in filteredItems = (items | filter:{title:searchText.delayed})">
             <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" toggle-complete="false"></div>
             <div ng-if="isOpen(item)" class="accordion-body" editable-field-container="auto">
               <div ng-include="'static/app/main/itemActions.html'"></div>
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-      <div ng-show="filteredTasks.length" class="filtered-items" ng-controller="TasksController">
+      <div ng-show="filteredTasks.length" class="filtered-items">
         <h3><a href ng-click="gotoTasks()">tasks</a></h3>
         <div class="inner-page-content-container" accordion>
           <div ng-repeat="task in filteredTasks = (tasks | filter:{title:searchText.delayed})">
@@ -59,7 +59,7 @@
           </div>
         </div>
       </div>
-      <div ng-show="filteredNotes.length" class="filtered-items" ng-controller="NotesController">
+      <div ng-show="filteredNotes.length" class="filtered-items">
         <h3><a href ng-click="gotoNotes()">notes</a></h3>
         <div class="inner-page-content-container" accordion>
           <div ng-repeat="note in filteredNotes = (notes | filter:{title:searchText.delayed})">
