--- a/frontend/core/src/main/webapp/static/app/main/pageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/pageHeader.html
@@ -1,4 +1,4 @@
-<nav ng-if="!omnibarVisible" id="{{activeFeature}}-header" class="swiper-no-swiping" role="navigation" ng-controller="HeaderController">
+<nav ng-if="!omnibarVisible" id="{{getActiveFeature()}}-header" class="swiper-no-swiping" role="navigation" ng-controller="HeaderController">
   <div id="active-action-wrapper" ng-style="{width: (currentWidth - getLabelWidth()) * 0.5}">
     <div id="active-action-content-wrapper">
       <button ng-if="!isDatepickerVisible" id="menu-button" type="button" ng-click="toggleMenu()" alt="menu">
@@ -7,7 +7,7 @@
       <a href ng-if="isDatepickerVisible" id="today-link" ng-class="{'today-link-active': isTodayActive}">today</a>
     </div>
   </div>
-  <div id="omnibar-label-wrapper"><label for="{{activeFeature + currentHeading}}OmnibarInput" ng-style="{width: getLabelWidth()}">&nbsp;</label></div>
+  <div id="omnibar-label-wrapper"><label for="{{getActiveFeature() + currentHeading}}OmnibarInput" ng-style="{width: getLabelWidth()}">&nbsp;</label></div>
   <div id="plus-button-wrapper" ng-style="{width: (currentWidth - getLabelWidth()) * 0.5}">
     <button id="plus-button" type="button" ng-click="addNew()" alt="add new">
       <span class="icon-plus"></span>
