--- a/frontend/core/src/main/webapp/static/app/notes/details.html
+++ b/frontend/core/src/main/webapp/static/app/notes/details.html
@@ -1,4 +1,4 @@
-<section id="notes-details" class="two-column-grid page" ng-controller="NotesController">
+<section id="notes-details" class="two-column-grid page">
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'notes'; omnibarFeature = 'notes'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="omnibarVisible && isActiveSlide('details')" class="content-container page-content-container">
@@ -6,7 +6,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide" ng-repeat="list in lists" swiper-slide="notes/details/{{list.uuid}}" slide-index="$index" ng-init="newNote = {relationships: {list: list.uuid}}">
             <div class="inner-slide-content-container">
-              <section class="list" ng-controller="ListsController">
+              <section class="list">
                 <h3><a href ng-click="toggleListContent()">{{list.title}}</a></h3>
                 <div ng-if="showListContent" ng-include="'static/app/base/listActions.html'"></div>
                 <div>
