--- a/frontend/core/src/main/webapp/static/app/notes/overview.html
+++ b/frontend/core/src/main/webapp/static/app/notes/overview.html
@@ -1,4 +1,4 @@
-<section id="notes-overview" class="two-column-grid page" ng-controller="NotesController">
+<section id="notes-overview" class="two-column-grid page">
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'overview'; omnibarFeature = 'notes'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="omnibarVisible && isActiveSlide('overview')" class="content-container page-content-container">
