--- a/frontend/core/src/main/webapp/static/app/notes/unsorted.html
+++ b/frontend/core/src/main/webapp/static/app/notes/unsorted.html
@@ -1,4 +1,4 @@
-<section id="notes-unsorted" class="two-column-grid page" ng-controller="NotesController">
+<section id="notes-unsorted" class="two-column-grid page">
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'unsorted'; omnibarFeature = 'notes'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="omnibarVisible && isActiveSlide('home')" class="content-container page-content-container no-heading-content-container">
