--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -1,4 +1,4 @@
-<section id="tasks-details" class="two-column-grid page" ng-controller="TasksController">
+<section id="tasks-details" class="two-column-grid page">
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'tasks'; omnibarFeature = 'tasks'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="(omnibarVisible && isActiveSlide('details'))" class="content-container page-content-container">
@@ -6,11 +6,13 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide" ng-repeat="list in lists" swiper-slide="tasks/details/{{list.uuid}}" slide-index="$index" ng-init="subtask = {relationships: {list: list.uuid}}">
             <div class="inner-slide-content-container">
-              <section class="list" ng-controller="ListsController">
-                <h3><a href ng-click="toggleListContent()">{{list.title}}</a></h3>
-                <div ng-if="showListContent" ng-include="'static/app/base/listActions.html'"></div>
+              <section class="list">
                 <div>
                   <div class="inner-page-content-container" accordion>
+                    <div accordion-title="list" edit-item="editList(list)" edit-item-title="editListTitle(list)" bold-title="true" has-complete="false" toggle-complete></div>
+                    <div ng-if="isOpen(list)" class="accordion-body" editable-field-container="auto">
+                      <div class="accordion-inner" ng-include="'static/app/base/listActions.html'"></div>
+                    </div>
                     <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid}">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
@@ -25,24 +27,26 @@
           </div>
           <div class="swiper-slide" ng-repeat="context in contexts" swiper-slide="tasks/details/{{context.uuid}}" slide-index="lists.length + $index" ng-init="subtask = {relationships: {context: context.uuid}}">
             <div class="inner-slide-content-container">
-              <section class="context" ng-controller="ContextsController">
-                <h3><a href ng-click="toggleContextContent()">@{{context.title}}</a></h3>
-                <div ng-if="showContextContent">
-                  <ul class="button-row">
-                    <li class="button-container left-of-two border-right">
-                      <button class="default-button" type="button" ng-click="editContext(context)">
-                        more
-                      </button>
-                    </li>
-                    <li class="button-container right-of-two">
-                      <button class="delete-button" type="button" ng-click="deleteContext(context)">
-                        delete
-                      </button>
-                    </li>
-                  </ul>
-                </div>
+              <section class="context">
                 <div>
                   <div class="inner-page-content-container" accordion>
+                    <div accordion-title="context" edit-item="editContext(context)" edit-item-title="editContextTitle(context)" bold-title="true" title-prefix="'@'" has-complete="false" toggle-complete></div>
+                    <div ng-if="isOpen(context)" class="accordion-body" editable-field-container="auto">
+                      <div class="accordion-inner">
+                        <ul class="button-row">
+                          <li class="button-container left-of-two border-right">
+                            <button class="normal-button" type="button" ng-click="closeAndCall(context, contextQuickEditDone)">
+                              done
+                            </button>
+                          </li>
+                          <li class="button-container right-of-two">
+                            <button class="delete-button" type="button" ng-click="closeAndCall(context, deleteContext)">
+                              delete
+                            </button>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
                     <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'byContextUUID', filterBy: context.uuid}">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
