--- a/frontend/core/src/main/webapp/static/app/tasks/overview.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/overview.html
@@ -1,10 +1,10 @@
-<section id="tasks-overview" class="two-column-grid page" ng-controller="TasksController">
+<section id="tasks-overview" class="two-column-grid page">
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'overview'; omnibarFeature = 'tasks'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="omnibarVisible && isActiveSlide('overview')" class="content-container page-content-container omnibar-animation">
       <div class="inner-page-content-container">
         <div ng-include="'static/app/base/listsOverview.html'" include-replace></div>
-        <section ng-init="newContext={title:undefined, tagType:'context'}" ng-controller="ContextsController">
+        <section ng-init="newContext={title:undefined, tagType:'context'}">
           <h3><a href class="page-header" ng-click="gotoContexts()">contexts</a></h3>
           <ul class="list-arrow-right">
             <li ng-show="contexts.length" ng-repeat="context in contexts">
