IScroll scroller in containers with accordion:  * scroll to opened accordion item and focused add item... input field  * changed iscroll.js to iscroll-probe.js to get the current scroll position  * public swipeNext and swipePrevious methods in SwiperService  * optional scope.disableSwiper parameter in swiperContainerDirective to initially disable swiping in slides with scroller  * accordionTitleDirective calls refresh scroller (and scroll to element) methdod in accordionDirective after toggle to recalculate container height  * register focused add item... element to scrollToDirective and scroll to focused element after new item addition  * initialize scrollToItems scope variable in ng-repeats and watch its size changes to refresh scroller height  * fire scrollerIncludeContentLoaded on ng-include onload events and refresh scroller  * scrollToContainerDirective to register scrollers within same feature  * scrollTo<Top|Bottom>Edge directives for generic pull to next/previous loaders

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -31,7 +31,7 @@
 
     <script src="static/lib/base64.js"></script>
     <script src="static/lib/expanding.js"></script>
-    <script src="static/lib/iscroll.js"></script>
+    <script src="static/lib/iscroll-probe.js"></script>
 
     <script src="static/common/common.js"></script>
     <script src="static/common/DateService.js"></script>
@@ -74,6 +74,8 @@
     <script src="static/app/base/featureContainerDirective.js"></script>
     <script src="static/app/base/snapDrawerDragDirective.js"></script>
     <script src="static/app/base/scrollableDirective.js"></script>
+    <script src="static/app/base/scrollToDirective.js"></script>
+    <script src="static/app/base/scrollToEdgeDirective.js"></script>
     <script src="static/app/base/swiperClickDirective.js"></script>
     <script src="static/app/base/swiperContainerDirective.js"></script>
     <script src="static/app/base/swiperSlideDirective.js"></script>
