--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -2,24 +2,24 @@
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'tasks'; omnibarFeature = 'tasks'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="(omnibarVisible && isActiveSlide('details'))" class="content-container page-content-container">
-      <div class="swiper-container vertical-slides" swiper-container="tasks/details" swiper-type="page" expected-slides="count = lists.length + contexts.length + 1">
+      <div class="swiper-container vertical-slides" swiper-container="tasks/details" swiper-type="page" swiper-container-disable="true" expected-slides="count = lists.length + contexts.length + 1">
         <div class="swiper-wrapper">
           <div class="swiper-slide" ng-repeat="list in lists" swiper-slide="tasks/details/{{list.uuid}}" slide-index="$index" ng-init="subtask = {relationships: {list: list.uuid}}">
             <div class="inner-slide-content-container">
-              <section class="list">
-                <div>
+              <section class="list"scroll-to="tasks/details/{{list.uuid}}" scroll-to-swiper="tasks/details">
+                <div id="scroller" style="min-height: 101%">
                   <div class="inner-page-content-container" accordion>
                     <div accordion-title="list" edit-item="editList(list)" edit-item-title="editListTitle(list)" bold-title="true" has-complete="false" toggle-complete></div>
                     <div ng-if="isOpen(list)" class="accordion-body" editable-field-container="auto">
                       <div class="accordion-inner" ng-include="'static/app/base/listActions.html'"></div>
                     </div>
-                    <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid}">
+                    <div ng-if="showContent('tasks')" ng-repeat="task in scrollToItems = (tasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid})">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
                         <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
                       </div>
                     </div>
-                    <div ng-include="'static/app/tasks/addTask.html'"></div>
+                    <div ng-include="'static/app/tasks/addTask.html'" onload="scrollerIncludeContentLoaded()"></div>
                   </div>
                 </div>
               </section>
@@ -27,8 +27,8 @@
           </div>
           <div class="swiper-slide" ng-repeat="context in contexts" swiper-slide="tasks/details/{{context.uuid}}" slide-index="lists.length + $index" ng-init="subtask = {relationships: {context: context.uuid}}">
             <div class="inner-slide-content-container">
-              <section class="context">
-                <div>
+              <section class="context" scroll-to="tasks/details/{{context.uuid}}" scroll-to-swiper="tasks/details">
+                <div id="scroller" style="min-height: 101%">
                   <div class="inner-page-content-container" accordion>
                     <div accordion-title="context" edit-item="editContext(context)" edit-item-title="editContextTitle(context)" bold-title="true" title-prefix="'@'" has-complete="false" toggle-complete></div>
                     <div ng-if="isOpen(context)" class="accordion-body" editable-field-container="auto">
@@ -47,13 +47,13 @@
                         </ul>
                       </div>
                     </div>
-                    <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'byContextUUID', filterBy: context.uuid}">
+                    <div ng-if="showContent('tasks')" ng-repeat="task in scrollToItems = (tasks | itemsFilter:{name:'byContextUUID', filterBy: context.uuid})">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
                         <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
                       </div>
                     </div>
-                    <div ng-include="'static/app/tasks/addTask.html'"></div>
+                    <div ng-include="'static/app/tasks/addTask.html'" onload="scrollerIncludeContentLoaded('tasks/details/' + context.uuid)"></div>
                   </div>
                 </div>
               </section>
@@ -61,17 +61,19 @@
           </div>
           <div class="swiper-slide" swiper-slide="tasks/details/unsorted" slide-index="lists.length + contexts.length" ng-init="subtask = {}">
             <div class="inner-slide-content-container">
-              <section class="unsorted">
-                <h3>unsorted</h3>
-                <div>
-                  <div class="inner-page-content-container" accordion>
-                    <div ng-if="showContent('tasks')" ng-repeat="task in tasks | itemsFilter:{name:'unsorted'}" ng-init="subtask = {}">
-                      <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-                      <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
-                        <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+              <section class="unsorted" scroll-to="tasks/details/unsorted" scroll-to-swiper="tasks/details">
+                <div id="scroller" style="min-height: 101%">
+                  <h3>unsorted</h3>
+                  <div>
+                    <div class="inner-page-content-container" accordion>
+                      <div ng-if="showContent('tasks')" ng-repeat="task in scrollToItems = (tasks | itemsFilter:{name:'unsorted'})" ng-init="subtask = {}">
+                        <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+                        <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
+                          <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+                        </div>
                       </div>
+                      <div ng-include="'static/app/tasks/addTask.html'" onload="scrollerIncludeContentLoaded('tasks/details/unsorted')"></div>
                     </div>
-                    <div ng-include="'static/app/tasks/addTask.html'"></div>
                   </div>
                 </div>
               </section>
