Removed refreshing of scroller on feature change and removed scroll-to-container as it was unnecessary without feature change refreshing

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -3,7 +3,7 @@
     <div class="column">
       <div class="page-heading" ng-init="heading = 'inbox'; omnibarFeature = 'inbox'" ng-include="'static/app/main/omnibar.html'"></div>
       <div ng-hide="omnibarVisible" id="inbox-page-content-container" class="content-container page-content-container no-heading-content-container omnibar-animation">
-        <div id="wrapper" style="height: 100%;" scroll-to-container="inbox" scroll-to="inbox">
+        <div id="wrapper" style="height: 100%;" scroll-to="inbox">
           <div id="scroller" style="min-height: 101%">
             <div class="accordion-wrapper">
               <div class="inner-page-content-container" accordion>
