--- a/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksSlides.html
@@ -1,5 +1,5 @@
 <div ng-show="isFeatureActive('tasks')" class="swiper-container main-slides" swiper-container="tasks" swiper-type="main" expected-slides="(isLoading && 1) || (!isLoading && 3)">
-  <div ng-hide="isDesktop && isMenuOpen" class="swiper-wrapper" scroll-to-container="tasks">
+  <div ng-hide="isDesktop && isMenuOpen" class="swiper-wrapper">
     <div class="swiper-slide" swiper-slide="tasks/home" slide-index=0 ng-include="'static/app/tasks/dates.html'" snap-drawer-drag="tasks"></div>
     <div ng-if="!isLoading" class="swiper-slide" swiper-slide="tasks/overview" slide-index=1 ng-include="'static/app/tasks/overview.html'"></div>
     <div ng-if="!isLoading" class="swiper-slide" swiper-slide="tasks/details" slide-index=2 ng-include="'static/app/tasks/details.html'"></div>
