Removed setting of home heading from feature container directive - done now locally at NavbarController where it is needed.

--- a/frontend/core/src/main/webapp/static/app/main/footer.html
+++ b/frontend/core/src/main/webapp/static/app/main/footer.html
@@ -2,7 +2,7 @@
   <ul class="horizontally-justified">
     <li id="home-link" class="justified-element">
       <a href ng-class="isActiveSlide('home') && 'active-slide'" ng-click="gotoHome()">
-        <span>{{homeHeading}}</span>
+        <span>{{getHomeHeading()}}</span>
       </a>
     </li>
 
