--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -54,7 +54,7 @@
           <div ng-repeat="task in filteredTasks = (tasks | filter:{title:searchText.delayed})">
             <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
             <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
-              <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+              <div class="accordion-inner" ng-init="initializeTask(task)" ng-include="'static/app/tasks/taskActions.html'"></div>
             </div>
           </div>
         </div>
