Moved titles in full edit to text areas for easier editing

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -30,7 +30,6 @@
     <script src="static/lib/angularjs/angular-route.js"></script>
 
     <script src="static/lib/base64.js"></script>
-    <script src="static/lib/expanding.js"></script>
     <script src="static/lib/iscroll-probe.js"></script>
 
     <script src="static/common/common.js"></script>
@@ -47,6 +46,8 @@
     <script src="static/common/loadingAnimationDirective.js"></script>
     <script src="static/common/passwordMatchDirective.js"></script>
     <script src="static/common/swiper.js"></script>
+    <script src="static/common/expanding.js"></script>
+
 
     <script src="static/app/app.js"></script>
 
