--- a/frontend/core/src/main/webapp/static/app/base/editContext.html
+++ b/frontend/core/src/main/webapp/static/app/base/editContext.html
@@ -6,15 +6,15 @@
         <form role="form" name="contextEdit" editable-field-container>
           <div class="form-group">
             <label class="sr-only" for="contextTitle">title</label>
-            <input type="text" id="contextTitle" class="simple-input" ng-model="context.title" placeholder="title..." required editable-field>
-          </div>
-          <div class="form-group" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}">
-            <label class="sr-only" for="contextDescription">description</label>
-            <textarea id="contextDescription" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}" class="simple-input" ng-model="context.description" placeholder="description..." expanding-textarea editable-field></textarea>
+            <textarea type="text" id="contextTitle" class="simple-input" ng-model="context.title" placeholder="title..." required expanding-textarea editable-field></textarea>
           </div>
           <div class="form-group">
             <label class="sr-only" for="contextLink">url</label>
             <input type="text" id="contextLink" class="simple-input" ng-model="context.link" placeholder="url..." editable-field>
+          </div>
+          <div class="form-group" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}">
+            <label class="sr-only" for="contextDescription">description</label>
+            <textarea id="contextDescription" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}" class="simple-input" ng-model="context.description" placeholder="description..." expanding-textarea editable-field></textarea>
           </div>
         </form>
       </div>
