--- a/frontend/core/src/main/webapp/static/app/base/editList.html
+++ b/frontend/core/src/main/webapp/static/app/base/editList.html
@@ -6,15 +6,15 @@
         <form role="form" name="listEdit" editable-field-container>
           <div class="form-group">
             <label class="sr-only" for="listTitle">title</label>
-            <input type="text" class="simple-input" id="listTitle" ng-model="list.title" placeholder="title..." required editable-field>
-          </div>
-          <div class="form-group" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}">
-            <label class="sr-only" for="listDescription">description</label>
-            <textarea class="simple-input" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}" id="listDescription" ng-model="list.description" placeholder="description..." expanding-textarea editable-field></textarea>
+            <textarea type="text" class="simple-input" id="listTitle" ng-model="list.title" placeholder="title..." required expanding-textarea editable-field></textarea>
           </div>
           <div class="form-group">
             <label class="sr-only" for="listLink">url</label>
             <input type="text" class="simple-input" id="listLink" ng-model="list.link" placeholder="url..." editable-field>
+          </div>
+          <div class="form-group" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}">
+            <label class="sr-only" for="listDescription">description</label>
+            <textarea class="simple-input" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}" id="listDescription" ng-model="list.description" placeholder="description..." expanding-textarea editable-field></textarea>
           </div>
         </form>
       </div>
