--- a/frontend/core/src/main/webapp/static/app/notes/details.html
+++ b/frontend/core/src/main/webapp/static/app/notes/details.html
@@ -8,23 +8,23 @@
             <div class="inner-slide-content-container">
               <section class="list" scroll-to="notes/details/{{list.uuid}}" scroll-to-swiper="notes/details">
                 <div id="scroller" style="min-height: 101%">
-                  <h3><a href ng-click="toggleListContent()">{{list.title}}</a></h3>
-                  <div ng-if="showListContent" ng-include="'static/app/base/listActions.html'"></div>
-                  <div>
-                    <div class="inner-page-content-container" accordion>
-                      <div ng-if="showContent('notes')" ng-repeat="note in scrollToItems = (notes | itemsFilter:{name:'byListUUID', filterBy: list.uuid})">
-                        <div accordion-title="note" edit-item="editNote(note)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete>
-                          <div ng-if="note.content" class="teaser">
-                            <a href id="note-teaser" ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
-                          </div>
-                          <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
-                            <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
-                          </div>
-                          <div ng-if="!note.content" class="teaser-empty"></div>
+                  <div class="inner-page-content-container" accordion>
+                    <div accordion-title="list" edit-item="editList(list)" edit-item-title="editListTitle(list)" bold-title="true" has-complete="false" toggle-complete></div>
+                    <div ng-if="isOpen(list)" class="accordion-body" editable-field-container="auto">
+                      <div class="accordion-inner" ng-include="'static/app/base/listActions.html'"></div>
+                    </div>
+                    <div ng-if="showContent('notes')" ng-repeat="note in scrollToItems = (notes | itemsFilter:{name:'byListUUID', filterBy: list.uuid})">
+                      <div accordion-title="note" edit-item="editNote(note)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete>
+                        <div ng-if="note.content" class="teaser">
+                          <a href id="note-teaser" ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
                         </div>
-                        <div ng-include="'static/app/notes/addNote.html'" onload="scrollerIncludeContentLoaded()"></div>
+                        <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
+                          <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
+                        </div>
+                        <div ng-if="!note.content" class="teaser-empty"></div>
                       </div>
                     </div>
+                    <div ng-include="'static/app/notes/addNote.html'" onload="scrollerIncludeContentLoaded()"></div>
                   </div>
                 </div>
               </section>
