--- a/frontend/core/src/main/webapp/static/app/notes/editNote.html
+++ b/frontend/core/src/main/webapp/static/app/notes/editNote.html
@@ -6,7 +6,7 @@
         <form role="form" name="noteEdit" editable-field-container>
           <div class="form-group">
             <label class="sr-only" for="noteTitle">title</label>
-            <input type="text" class="simple-input font-bold" id="noteTitle" ng-model="note.title" placeholder="title..." maxlength="128" required editable-field>
+            <textarea type="text" class="simple-input font-bold" id="noteTitle" ng-model="note.title" placeholder="title..." maxlength="128" required expanding-textarea editable-field></textarea>
           </div>
           <div class="form-group" ng-style="{maxHeight: getEditNoteContentMaxHeight()}">
             <label class="sr-only" for="noteContent">content</label>
