--- a/frontend/core/src/main/webapp/static/app/tasks/editTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTask.html
@@ -8,11 +8,7 @@
 
           <div class="form-group">
             <label class="sr-only" for="taskTitle">title</label>
-            <input type="text" id="taskTitle" class="simple-input font-bold" ng-model="task.title" placeholder="title..." maxlength="128" required editable-field>
-          </div>
-          <div class="form-group" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" >
-            <label class="sr-only" for="taskDescription">description</label>
-            <textarea id="taskDescription" class="simple-input" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" ng-model="task.description" placeholder="description..." maxlength="1024" expanding-textarea editable-field></textarea>
+            <textarea type="text" id="taskTitle" class="simple-input font-bold" ng-model="task.title" placeholder="title..." maxlength="128" required expanding-textarea editable-field></textarea>
           </div>
 
           <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
@@ -23,12 +19,14 @@
               <option value="">select repeating...</option>
             </select>
           </div>
-
           <div class="form-group">
             <label class="sr-only" for="taskLink">url</label>
             <input type="text" id="taskLink" class="simple-input" ng-model="task.link" placeholder="url..." editable-field>
           </div>
-
+          <div class="form-group" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" >
+            <label class="sr-only" for="taskDescription">description</label>
+            <textarea id="taskDescription" class="simple-input" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" ng-model="task.description" placeholder="description..." maxlength="1024" expanding-textarea editable-field></textarea>
+          </div>
         </form>
       </div>
     </div>
