Bold title for context and list

--- a/frontend/core/src/main/webapp/static/app/base/editContext.html
+++ b/frontend/core/src/main/webapp/static/app/base/editContext.html
@@ -6,7 +6,7 @@
         <form role="form" name="contextEdit" editable-field-container>
           <div class="form-group">
             <label class="sr-only" for="contextTitle">title</label>
-            <textarea type="text" id="contextTitle" class="simple-input" ng-model="context.title" placeholder="title..." required expanding-textarea editable-field></textarea>
+            <textarea type="text" id="contextTitle" class="simple-input font-bold" ng-model="context.title" placeholder="title..." required expanding-textarea editable-field></textarea>
           </div>
           <div class="form-group">
             <label class="sr-only" for="contextLink">url</label>
