--- a/frontend/core/src/main/webapp/static/app/base/editList.html
+++ b/frontend/core/src/main/webapp/static/app/base/editList.html
@@ -6,7 +6,7 @@
         <form role="form" name="listEdit" editable-field-container>
           <div class="form-group">
             <label class="sr-only" for="listTitle">title</label>
-            <textarea type="text" class="simple-input" id="listTitle" ng-model="list.title" placeholder="title..." required expanding-textarea editable-field></textarea>
+            <textarea type="text" class="simple-input font-bold" id="listTitle" ng-model="list.title" placeholder="title..." required expanding-textarea editable-field></textarea>
           </div>
           <div class="form-group">
             <label class="sr-only" for="listLink">url</label>
